--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "socket.io": "^4.7.4"
   },
   "type": "commonjs"
 }
